--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -7,14 +7,13 @@
         <H1>States</H1>
         <UL>
         {% for state in states.values()|sort(attribute='name') %}
-            <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
+            <LI>{{ state.id }}: <B>{{ state.name }}</B>
             <UL>
-            {% for city in cities.values()|sorted(attribute='name') %}
-                {% if city.state_id == state.id %}
-                    <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
-                {% endif %}
+            {% for city in state.cities|sorted(attribute='name') %}
+                <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
             {% endfor %}
             </UL>
+            </LI>
         {% endfor %}
         </UL>
     </BODY>
