--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -9,8 +9,8 @@
             <UL>
             {% for s in states.values()|sort(attribute='name') %}
                 <LI>{{ s.id }}: <B>{{ s.name }}</B></LI>
-            {% endfor %} 
-        {% if state %}
+            {% endfor %}
+        {% elif state %}
             <H1>State: {{ state.name }}</H1>
             <H3>Cities:</H3>
             <UL>
