--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -1,26 +1,26 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <title>HBNB</title>
-  </head>
-  <body>
-  {% if id is none %}
-    <h1>States</h1>
-    <ul>
-    {% for state in states|sort(attribute='name') %}
-      <li>{{ state.id }}: <b>{{ state.name }}</b></li>
-    {% endfor %}
-    </ul>
-  {% elif states is none %}
-    <h1>Not found!</h1>
-  {% else %}
-    <h1>State: {{ states.name }}</h1>
-    <h3>Cities:</h3>
-    <ul>
-    {% for city in states.cities|sort(attribute='name') %}
-        <li>{{ city.id }}: <b>{{ city.name }}</b></li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-  </body>
-</html>
+<!DOCTYPE html>
+<HTML lang="en">
+    <HEAD>
+        <TITLE>HBNB</TITLE>
+    </HEAD>
+    <BODY>
+        {% if id is None %}
+            <H1>States</H1>
+            <UL>
+            {% for s in states.values()|sort(attribute='name') %}
+                <LI>{{ s.id }}: <B>{{ s.name }}</B></LI>
+            {% endfor %}
+        {% elif states is not None %}
+            {% set state = states[id_state] %}
+            <H1>State: {{ state.name }}</H1>
+            <H3>Cities:</H3>
+            <UL>
+            {% for c in state.cities|sort(attribute='name') %}
+                <LI>{{ c.id }}: <B>{{ c.name }}</B></LI>
+            {% endfor %}
+            </UL>
+        {% else %}
+            <H1>Not found!</H1>
+        {% endif %}
+    </BODY>
+</HTML>
