--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -8,23 +8,23 @@
 <BODY>
     {% if not state_id %}
     <H1>States</H1>
-    <UL>
-        {% for state in states.values()|sort(attribute='name') %}
-        <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
-        {% endfor %}
-    </UL>
-    {% elif state_id in states%}
-    {% set state = states[state_id] %}
-    <H1>State: {{ state.name }}</H1>
-    <H3>Cities</H3>
-    <UL>
-        {% for city in state.cities|sort(attribute='name') %}
-        <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
-        {% endfor %}
-    </UL>
-    {% else %}
-    <H1>Not found!</H1>
-    {% endif %}
+        <UL>
+            {% for s in states.values()|sort(attribute='name') %}
+                <LI>{{ s.id }}: <B>{{ s.name }}</B></LI>
+            {% endfor %}
+        </UL>
+        {% elif id_state in states %}
+        {% set s = states[id_state] %}
+        <H1>State: {{ state.name }}</H1>
+        <H3>Cities</H3>
+        <UL>
+            {% for c in s.cities|sort(attribute='name') %}
+                <LI>{{ c.id }}: <B>{{ c.name }}</B></LI>
+            {% endfor %}
+        </UL>
+        {% else %}
+            <H1>Not found!</H1>
+        {% endif %}
 </BODY>
 
 </HTML>
