--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -6,7 +6,7 @@
 </HEAD>
 
 <BODY>
-    {% if not state_id %}
+    {% if not id_state %}
     <H1>States</H1>
         <UL>
             {% for s in states.values()|sort(attribute='name') %}
@@ -15,7 +15,7 @@
         </UL>
         {% elif id_state in states %}
         {% set s = states[id_state] %}
-        <H1>State: {{ state.name }}</H1>
+        <H1>State: {{ s.name }}</H1>
         <H3>Cities</H3>
         <UL>
             {% for c in s.cities|sort(attribute='name') %}
