--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -8,22 +8,22 @@
 <BODY>
     {% if not id_state %}
     <H1>States</H1>
-        <UL>
+    <UL>
         {% for s in states.values()|sort(attribute='name') %}
-            <LI>{{ s.id }}: <B>{{ s.name }}</B></LI>
+        <LI>{{ s.id }}: <B>{{ s.name }}</B></LI>
         {% endfor %}
-        </UL>
+    </UL>
     {% elif id_state in states %}
-    {% set s = states[id_state] %}
-        <H1>State: {{ s.name }}</H1>
-        <H3>Cities</H3>
-        <UL>
-        {% for c in s.cities|sort(attribute='name') %}
-            <LI>{{ c.id }}: <B>{{ c.name }}</B></LI>
+    {% set state = states[id_state] %}
+    <H1>State: {{ state.name }}</H1>
+    <H3>Cities</H3>
+    <UL>
+        {% for c in state.cities|sort(attribute='name') %}
+        <LI>{{ c.id }}: <B>{{ c.name }}</B></LI>
         {% endfor %}
-        </UL>
+    </UL>
     {% else %}
-            <H1>Not found!</H1>
+    <H1>Not found!</H1>
     {% endif %}
 </BODY>
 
