--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -6,15 +6,15 @@
 </HEAD>
 
 <BODY>
-    {% if not id_state %}
+    {% if not state_id %}
     <H1>States</H1>
     <UL>
         {% for state in states.values()|sort(attribute='name') %}
             <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
         {% endfor %}
     </UL>
-    {% elif id_state in states%}
-    {% set state = states[id_state] %}
+    {% elif state_id in states%}
+    {% set state = states[state_id] %}
     <H1>State: {{ state.name }}</H1>
     <H3>Cities</H3>
     <UL>
